--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
+  fluttertoast: ^8.2.1
+  page_indicator: ^0.4.1
+  font_awesome_flutter: ^10.4.0
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
@@ -60,7 +64,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - images/
+    - assets/icon/
+    - assets/text/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
