--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -40,6 +41,11 @@ dependencies:
   page_indicator: ^0.4.1
   font_awesome_flutter: ^10.4.0
   intl: ^0.18.0
+  http: ^0.13.5
+  flutter_bloc: ^7.0.0
+  geolocator: ^7.1.0
+
+
 
 dev_dependencies:
   flutter_test:
